# bib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bibliography.bib  fix.sh  release.sh
.github/: workflow.yaml
.github/workflows/: homebrew_release.yaml  main.yaml  release.yml
completions/: _bib  _bib.sh  bib.bash  bib.fish
src/: ai.rs  base.rs  bibtex.rs  completion.rs  config.rs  database.rs  embed.rs  embedding.rs  error.rs  fuzzy.rs  gemini.rs  main.rs  pdf.rs  query.rs  search.rs  settings.rs  stacks.rs  storage.rs  store.rs  ui.rs  utils.rs
src/add/: grobid.rs  input.rs  mod.rs
src/ai/: error.rs  mod.rs
src/bibtex/: error.rs  mod.rs
src/commands/: add.rs  cleanup.rs  debug.rs  export.rs  find.rs  mod.rs  open.rs  prompt.rs  remote.rs  scan.rs  search.rs  stack.rs  status.rs  synch.rs  weave.rs  xplore.rs
src/commands/add/: error.rs  handlers.rs  mod.rs  sources.rs
src/commands/find/: error.rs  mod.rs
src/commands/scan/: error.rs  mod.rs
src/commands/search/: error.rs  mod.rs
src/core/: embedding.rs  mod.rs  paper.rs
src/parser/: arxiv.rs  bibfile.rs  mod.rs
src/pdf/: error.rs  mod.rs
src/semantic/: query.rs
src/storage/: error.rs  mod.rs
src/ui/: macros.rs  mod.rs
src/utils/: ai.rs  bibfile.rs  fmt.rs  io.rs  list.rs  mod.rs  settings.rs  ui.rs
