[package]
name = "bib"
version = "0.3.0"
edition = "2021"
authors = ["António Leitão"]
description = "LLM empowered bibliography management."
repository = "https://github.com/antonio-leitao/bib"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
biblatex = "0.8"
regex = "1.5"
termion = "1.5.6"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
shellexpand = "3.1.0"
bincode = "1.3.3"
toml = "0.8.8"
open = "5.0.0"
quick-xml = { version = "0.31.0", features = ["serde", "serialize", "overlapped-lists"] }
fastembed = "4.0.0"
hf-hub = "0.3.2"
pdf-extract = "0.7.9"
gag = "1.0.0"
dotzilla = "0.1.0"
copypasta = "0.10.1"
indexmap = { version = "2.5.0", features = ["serde"] }
