[package]
name = "bib"
version = "0.5.11"
edition = "2021"
authors = ["António Leitão"]
description = "LLM empowered bibliography management."
repository = "https://github.com/antonio-leitao/bib"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
biblatex = "0.8"
regex = "1.5"
termion = "1.5.6"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
shellexpand = "3.1.0"
bincode = "1.3.3"
toml = "0.8.8"
open = "5.0.0"
quick-xml = { version = "0.31.0", features = ["serde", "serialize", "overlapped-lists"] }
dotzilla = "0.1.0"
copypasta = "0.10.1"
indexmap = { version = "2.5.0", features = ["serde"] }
url = "2.5.4"
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
indicatif = "0.17.11"
arboard = "3.6.0"
dotenvy = "0.15.7"
sha2 = "0.10.9"
rusqlite = "0.37.0"
chrono = "0.4.41"
dirs = "6.0.0"
sublime_fuzzy = "0.7.0"
