[package]
name = "bib"
version = "0.6.1"
edition = "2024"
authors = ["António Leitão"]
description = "LLM empowered bibliography management."
repository = "https://github.com/antonio-leitao/bib"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["multipart", "json"] }
roxmltree = "0.19"
thiserror = "2.0.18"
stop-words = "0.8"
adamastor = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "0.8.0"
caravela = "0.1.1"
clap = { version = "4.5.54", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
directories = "6.0.0"
dialoguer = "0.12.0"
shellexpand = "3.1.1"
toml = "0.9.11"
arboard = "3.6.1"
url = "2.5.8"
indicatif = "0.18.3"
terminal_size = "0.4"
termion = "4.0.6"
sublime_fuzzy = "0.7.0"
webbrowser = "1"
futures = "0.3"
